Fixed layout issues and event propagation in NGT_Object headers

--- a/Shared/NGT_Object.razor.css
+++ b/Shared/NGT_Object.razor.css
@@ -1,5 +1,10 @@
-﻿.generator-accordion:not(.collapse)
-{
-    background-color:white;
-    color:black;
+﻿.generator-accordion {
+    border: none;
+    width: auto;
 }
+
+    .generator-accordion:not(.collapse) {
+        background-color: white;
+        color: black;
+        box-shadow: none;
+    }
